chore(components/jumbotron): 기존에 있었던 epilogue text 폰트 변경

--- a/components/Jumbotron/Jumbotron.module.scss
+++ b/components/Jumbotron/Jumbotron.module.scss
@@ -69,7 +69,7 @@
   padding: 32px 6px;
 
   .epilogue-text {
-    font-family: 'Crafty Girls', cursive;
+    font-family: 'Work Sans', sans-serif;
     line-height: 32px;
     color: #a9a9a9;
   }
