--- a/components/Card/ImageCard/ImageCard.module.scss
+++ b/components/Card/ImageCard/ImageCard.module.scss
@@ -10,7 +10,8 @@
 
 .image {
   width: 100%;
-  height: 210px;
+  height: 100%;
+  max-height: 210px;
   background-size: 100%;
   border-radius: 16px 16px 0 0;
 }
