--- a/components/Card/ImageCard/ImageCard.module.scss
+++ b/components/Card/ImageCard/ImageCard.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 320px;
-  height: 340px;
+  height: auto;
   background-color: #f9f9f9;
   border-radius: 16px 16px 8px 8px;
   cursor: pointer;
@@ -41,6 +41,7 @@
   padding: 6px 12px;
   font-size: 24px;
   font-weight: 700;
+  line-height: 32px;
   color: #212121;
 }
 
