--- a/components/Card/ImageCard/ImageCard.module.scss
+++ b/components/Card/ImageCard/ImageCard.module.scss
@@ -11,9 +11,10 @@
 .image {
   width: 100%;
   height: 100%;
-  max-height: 210px;
+  max-height: 240px;
   background-size: 100%;
   border-radius: 16px 16px 0 0;
+  overflow-y: hidden;
 }
 
 .tag-content {
