--- a/containers/Landing/Landing.module.scss
+++ b/containers/Landing/Landing.module.scss
@@ -1,4 +1,5 @@
 .work-section {
+  position: relative;
   display: flex;
   flex-direction: column;
   padding: 32px 0;
@@ -18,4 +19,28 @@
   gap: 24px;
   justify-content: space-between;
   justify-items: center;
+}
+
+.slide-content {
+  display: grid;
+  grid-template-columns: repeat(9, 1fr);
+  gap: 30px;
+  justify-content: space-between;
+  justify-items: center;
+  overflow-x: hidden;
+}
+
+.carousl-button {
+  display: flex;
+  position: absolute;
+  right: 0;
+}
+
+.icon {
+  width: 32px;
+  margin: 0 12px;
+
+  &:focus {
+    border: 1px solid transparent;
+  }
 }
