--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,8 +1,11 @@
 .wrap {
   display: flex;
-  position: relative;
+  position: sticky;
   flex-direction: column;
   width: 100%;
+  background-color: #fff;
+  top: 0;
+  z-index: 1;
 }
 
 .navbar-content {
