--- a/components/Layout/GNBLayout/GNBLayout.module.scss
+++ b/components/Layout/GNBLayout/GNBLayout.module.scss
@@ -6,4 +6,9 @@
   max-width: 1280px;
   padding: 0 8rem;
   margin: 0 auto;
+
+  @media (min-width: 280px) and (max-width: 1024px) {
+    max-width: 100%;
+    padding: 0;
+  }
 }
